# nonebot-plugin-session

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml
.github/workflows/: codecov.yml
nonebot_plugin_session/: __init__.py  const.py  extractor.py  model.py  saa.py  session.py
nonebot_plugin_session/adapters/: __init__.py  console.py  discord.py  dodo.py  feishu.py  kaiheila.py  onebot_v11.py  onebot_v12.py  qq.py  qqguild.py  red.py  satori.py  telegram.py  villa.py
nonebot_plugin_session/migrations/: 1d71de778430_delete_duplicate_session.py  36de70108aeb_init_db.py  4a6b4ef804a9_set_not_null_value.py  7d0575ba4608_enum_type.py  b87a6a07c25d_alter_not_null.py  c18c90dc3489_alter_not_null.py
tests/: conftest.py  test_console.py  test_datastore.py  test_discord.py  test_dodo.py  test_feishu.py  test_kaiheila.py  test_onebot_v11.py  test_onebot_v12.py  test_qq.py  test_qqguild.py  test_red.py  test_saa.py  test_satori.py  test_session_id.py  test_telegram.py  test_undefined.py  test_villa.py  utils.py
tests/plugins/: echo_session.py
