[tool.poetry]
name = "nonebot_plugin_session"
version = "0.2.3"
description = "Nonebot2 会话信息提取与会话id定义"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-session"
repository = "https://github.com/noneplugin/nonebot-plugin-session"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
strenum = "^0.4.8"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
nonebug = "^0.3.0"
nonebot2 = { version = "^2.0.0", extras = ["fastapi", "httpx", "websockets"] }

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.2.4"
nonebot-adapter-console = "^0.4.0"
nonebot-adapter-qqguild = "^0.2.5"
nonebot-adapter-kaiheila = "^0.2.12"
nonebot-adapter-telegram = "^0.1.0b14"
nonebot-adapter-feishu = "^2.1.1"
nonebot-adapter-red = "^0.7.4"
nonebot-adapter-discord = "^0.1.1"
nonebot-adapter-satori = "^0.8.0"
nonebot-adapter-qq = "^1.3.0"
nonebot-adapter-villa = "^1.2.2"
nonebot-adapter-dodo = "^0.1.3"

[tool.nonebot]
plugins = ["nonebot_plugin_session"]
adapters = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
