[tool.poetry]
name = "nonebot_plugin_session"
version = "0.3.0"
description = "Nonebot2 会话信息提取与会话id定义"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-session"
repository = "https://github.com/noneplugin/nonebot-plugin-session"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0"
strenum = "^0.4.8"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
nonebug = "^0.3.0"
websockets = { version = ">=10.0" }
fastapi = { version = ">=0.93.0,<1.0.0" }
httpx = { version = ">=0.20.0,<1.0.0", extras = ["http2"] }
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.4.0"
nonebot-adapter-console = "^0.5.0"
nonebot-adapter-kaiheila = "^0.3.1"
nonebot-adapter-telegram = { git = "https://github.com/nonebot/adapter-telegram.git" }
nonebot-adapter-feishu = "^2.4.0"
nonebot-adapter-red = "^0.9.0"
nonebot-adapter-discord = { git = "https://github.com/nonebot/adapter-discord.git" }
nonebot-adapter-satori = "^0.9.3"
nonebot-adapter-qq = "^1.4.1"
nonebot-adapter-dodo = "^0.2.0"

[tool.nonebot]
plugins = ["nonebot_plugin_session"]
adapters = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
