[tool.poetry]
name = "nonebot_plugin_session"
version = "0.3.2"
description = "Nonebot2 会话信息提取与会话id定义"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-session"
repository = "https://github.com/noneplugin/nonebot-plugin-session"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3.0"
strenum = "^0.4.15"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
nonebug = "^0.3.0"
websockets = { version = ">=10.0" }
fastapi = { version = ">=0.93.0,<1.0.0" }
httpx = { version = ">=0.20.0,<1.0.0", extras = ["http2"] }
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }

[tool.poetry.group.adapters]
optional = true

[tool.poetry.group.adapters.dependencies]
nonebot-adapter-onebot = "^2.4.4"
nonebot-adapter-console = "^0.6.0"
nonebot-adapter-kaiheila = "^0.3.4"
nonebot-adapter-telegram = "^0.1.0b17"
nonebot-adapter-feishu = "^2.6.2"
nonebot-adapter-red = "^0.9.0"
nonebot-adapter-discord = "^0.1.8"
nonebot-adapter-satori = "^0.12.3"
nonebot-adapter-qq = "^1.5.0"
nonebot-adapter-dodo = "^0.2.1"

[tool.nonebot]
plugins = ["nonebot_plugin_session"]
adapters = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
